--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,30 @@
         <item name="android:textSize">@dimen/_12sdp</item>
     </style>
 
+
+    <style name="spinnerItemStyle">
+        <item name="android:padding">@dimen/_12sdp</item>
+        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="android:textColor">@color/colorBlackText</item>
+    </style>
+
+    <style name="spinnerDropDownItemStyle">
+        <item name="android:padding">@dimen/_12sdp</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+        <item name="android:textColor">@color/colorBlackText</item>
+    </style>
+
+    <style name="Spinner_new_post">
+        <item name="android:paddingStart">0dp</item>
+        <item name="android:paddingEnd">0dp</item>
+        <item name="android:textColor">@color/colorBlackText</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+    </style>
+
+    <style name="HintSize10" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">@dimen/_10sdp</item>
+    </style>
+
     <!-- Divya -->
 
 
