manuka - location picker updated

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,7 +36,9 @@
                     android:layout_weight="1"
                     android:background="@color/colorWhite"
                     android:drawableStart="@drawable/ic_baseline_location_on_24"
+                    android:ellipsize="end"
                     android:fontFamily="serif"
+                    android:maxLines="1"
                     android:paddingStart="@dimen/_16sdp"
                     android:paddingEnd="@dimen/_16sdp"
                     android:text="@string/menu_location"
