--- a/app/src/main/res/layout/manuka_activity_location_picker.xml
+++ b/app/src/main/res/layout/manuka_activity_location_picker.xml
@@ -17,19 +17,58 @@
         android:layout_height="@dimen/_1sdp"
         android:background="@color/colorWhiteLite" />
 
-    <TextView
-        android:id="@+id/all_locations"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
-        android:padding="@dimen/_16sdp"
-        android:text="All of Sri Lanka"
-        android:textColor="@color/colorBlackText"
-        android:textSize="@dimen/_14sdp" />
+        android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/location_recycle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/all_locations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
+                android:padding="@dimen/_16sdp"
+                android:text="@string/all_of_sri_lanka"
+                android:textColor="@color/colorBlackText"
+                android:textSize="@dimen/_14sdp" />
+
+            <TextView
+                android:id="@+id/backToAllLocations"
+                android:background="@drawable/button_border"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:drawableStart="@drawable/ic_baseline_arrow_back_24_large"
+                android:drawableTint="@color/colorGreyBtn"
+                android:drawablePadding="@dimen/_8sdp"
+                android:padding="@dimen/_16sdp"
+                android:text="Back to All locatons"
+                android:textColor="@color/colorGreyBtn"
+                android:textSize="@dimen/_14sdp" />
+
+            <TextView
+                android:id="@+id/mainDistrict"
+                android:background="@color/com_facebook_blue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:drawablePadding="@dimen/_8sdp"
+                android:padding="@dimen/_16sdp"
+                android:text="Back to All locatons"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_14sdp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/location_recycle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
