--- a/app/src/main/res/layout/manuka_location_view.xml
+++ b/app/src/main/res/layout/manuka_location_view.xml
@@ -3,17 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorWhite"
+    android:gravity="center_vertical"
     android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
-        android:background="@color/colorWhiteLite" />
+        android:background="@color/baseline_color_grey"
+        android:gravity="center_vertical" />
 
     <TextView
         android:id="@+id/locationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:padding="@dimen/_16sdp"
         android:text="@string/loading"
         android:textColor="@color/colorBlackText"
