--- a/app/src/main/res/layout/manuka_ads_row_card_disable.xml
+++ b/app/src/main/res/layout/manuka_ads_row_card_disable.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
     app:cardCornerRadius="@dimen/_12sdp"
     app:cardElevation="@dimen/_6sdp"
-    app:cardBackgroundColor="@color/baseline_color_grey"
     app:cardUseCompatPadding="true">
 
     <!-- Manuka -->
@@ -14,96 +13,94 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/_16sdp">
+
+        <ImageView
+            android:id="@+id/myaddsImage"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_120sdp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/image"
+            android:scaleType="centerCrop"
+            android:src="@drawable/spinner_48_inner_holo" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/_6sdp">
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical"
+            android:paddingTop="@dimen/_12sdp"
+            android:paddingBottom="@dimen/_8sdp">
 
-            <ImageView
-                android:id="@+id/myaddsImage"
-                android:layout_width="@dimen/_80sdp"
-                android:layout_height="@dimen/_60sdp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/_6sdp"
-                android:contentDescription="@string/image"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:src="@drawable/spinner_48_inner_holo" />
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/myaddsTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical">
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="@string/loading"
+                android:textColor="@color/colorBlackText"
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/myaddsTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorBlackText"
-                    android:textSize="@dimen/_12sdp"
-                    android:maxLines="1"
-                    android:text="@string/loading"
-                    android:ellipsize="end"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/myaddsPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_4sdp"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="@string/loading"
+                android:textColor="@color/colorGreen"
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/myaddsPrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/colorGreen"
-                    android:textSize="@dimen/_12sdp"
-                    android:maxLines="1"
-                    android:text="@string/loading"
-                    android:ellipsize="end"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/myaddsDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_4sdp"
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_vertical"
+                android:text="@string/loading"
+                android:textSize="@dimen/_10sdp" />
 
-                <TextView
-                    android:id="@+id/myaddsDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_2sdp"
-                    android:fontFamily="sans-serif-medium"
-                    android:gravity="center_vertical"
-                    android:text="@string/loading"
-                    android:textSize="@dimen/_10sdp" />
-
-                <TextView
-                    android:id="@+id/myaddsAprovedStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorDangerDark"
-                    android:elevation="@dimen/_4sdp"
-                    android:fontFamily="sans-serif-medium"
-                    android:gravity="center"
-                    android:text="@string/loading"
-                    android:paddingStart="@dimen/_16sdp"
-                    android:paddingTop="@dimen/_2sdp"
-                    android:paddingEnd="@dimen/_16sdp"
-                    android:paddingBottom="@dimen/_2sdp"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/_10sdp" />
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/myaddsAprovedStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:background="@color/colorDangerDark"
+                android:elevation="@dimen/_4sdp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:paddingStart="@dimen/_20sdp"
+                android:paddingTop="@dimen/_8sdp"
+                android:paddingEnd="@dimen/_20sdp"
+                android:paddingBottom="@dimen/_8sdp"
+                android:text="@string/loading"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_12sdp" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/myaddsUaprovedReason"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorWarning"
-            android:gravity="center"
-            android:text="@string/loading"
-            android:padding="@dimen/_4sdp"
-            android:textColor="@color/colorBlackText"
-            android:textSize="@dimen/_10sdp"
-            android:visibility="gone" />
-
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/myaddsUaprovedReason"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWarning"
+        android:gravity="center"
+        android:padding="@dimen/_4sdp"
+        android:text="@string/loading"
+        android:textColor="@color/colorBlackText"
+        android:textSize="@dimen/_10sdp"
+        android:visibility="gone" />
 
 </androidx.cardview.widget.CardView>
