--- a/app/src/main/res/layout/divya_activity_my_favourites.xml
+++ b/app/src/main/res/layout/divya_activity_my_favourites.xml
@@ -12,20 +12,30 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_60sdp"
+        android:layout_marginTop="@dimen/_80sdp"
+        android:layout_marginBottom="@dimen/_120sdp"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progress_grey" />
+
     <LinearLayout
-        android:layout_marginTop="@dimen/_16sdp"
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_16sdp"
         android:background="@color/colorWhite"
         android:orientation="vertical">
 
         <TextView
-            android:paddingTop="@dimen/_8sdp"
-            android:paddingBottom="@dimen/_8sdp"
-            android:paddingStart="@dimen/_16sdp"
-            android:paddingEnd="@dimen/_16sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="@dimen/_16sdp"
+            android:paddingTop="@dimen/_8sdp"
+            android:paddingEnd="@dimen/_16sdp"
+            android:paddingBottom="@dimen/_8sdp"
             android:text="@string/favourites"
             android:textColor="@color/colorBlackText"
             android:textSize="@dimen/_10sdp"
@@ -42,12 +52,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <FrameLayout
-            android:id="@+id/frameLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
-
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
 </LinearLayout>
